--- a/quotes/package.json
+++ b/quotes/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quotes",
   "version": "0.1.0",
+  "homepage":"https://zifftalmon.github.io/Quotes-App/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
